# ComfyUI-PromptMaker-PNGTuber

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
examples/: README.md
examples/workflows/: pngtuber_qwen_mouth_generation.json  pngtuber_video_upload_bundle.json  promptmaker_pngtuber_generated_mouth_applier.json  promptmaker_pngtuber_generated_mouth_applier_api.json  promptmaker_pngtuber_qwen_mouth_generation_api.json  promptmaker_pngtuber_video_mouth.json  promptmaker_pngtuber_video_mouth_api.json  promptmaker_pngtuber_video_upload_bundle_api.json
web/js/: pngtuber_video_upload.js
